fix: :bug: Fixed overflow issues with bio

--- a/src/components/profile-pane/styles.module.scss
+++ b/src/components/profile-pane/styles.module.scss
@@ -84,7 +84,13 @@
   border-radius: 8px;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.06);
+
+  white-space: pre-wrap;
+  word-break: break-word;
   white-space: pre-line;
+  max-height: 500px;
+  overflow: auto;
+
 }
 
 .sidePane {
